<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/tableBG1"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table1"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/tableID_1"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableBG2"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table2"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/tableID_2"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableBG3"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table3"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_3"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/tableBG4"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table4"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_4"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableBG5"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table5"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_5"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableBG6"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table6"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_6"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/tableBG7"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table7"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/tableID_7"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableBG8"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table8"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_8"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tableBG9"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:layout_width="120dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/table9"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/tableID_9"
                    android:backgroundTint="@color/grey"
                    android:text="@string/reservar"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/numberTables"
                android:hint="@string/numeroMesa"
                android:layout_width="200dp"
                android:layout_height="50sp"/>
            <Button
                android:id="@+id/libertTable"
                android:text="@string/liberar"
                android:backgroundTint="@color/greySecond"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp">
        <Button
            android:id="@+id/SaveOperation"
            android:text="@string/salvarOperacao"
            android:backgroundTint="@color/greySecond"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/reserveAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservarTodas"
            android:backgroundTint="@color/greySecond"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:backgroundTint="@color/greySecond"
            android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/grey">
            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:textColor="@color/black"
                android:text="@string/logOut"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>